<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_notes"
            android:icon="@drawable/ic_baseline_assignment_24"
            android:title="Notes" />
        <item
            android:id="@+id/nav_courses"
            android:icon="@drawable/ic_baseline_library_books_24"
            android:title="Courses" />
        <item
            android:id="@+id/nav_share"
            android:icon="@drawable/ic_menu_slideshow"
            android:title="@string/menu_share" />
        <item
            android:id="@+id/nav_send"
            android:icon="@drawable/ic_menu_slideshow"
            android:title="@string/menu_slideshow" />
    </group>

</menu>